[gd_scene load_steps=4 format=2]

[ext_resource path="res://raw_assets/images_icons/badges/placeholder.png" type="Texture" id=1]
[ext_resource path="res://src/ui/menu.theme" type="Theme" id=2]
[ext_resource path="res://src/ui/run_summary_page/badge_icon/run_summary_badge_icon.gd" type="Script" id=3]

[node name="RunSummaryBadgeIcon" type="VBoxContainer"]
anchor_left = 0.483838
anchor_top = 0.47037
anchor_right = 0.516162
anchor_bottom = 0.571296
margin_bottom = -45.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource( 2 )
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BadgeIcon" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 72.0

[node name="LabelCount" type="Label" parent="."]
margin_top = 76.0
margin_right = 64.0
margin_bottom = 109.0
text = "x 0"
align = 1
valign = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
